Fixed center align on app bar

--- a/src/sass/components/_app-bar.scss
+++ b/src/sass/components/_app-bar.scss
@@ -78,7 +78,7 @@
         }
     }
 
-    &[data-md-type="center"] {
+    &[data-md-type="center"] &__headline {
         text-align: center;
     }
 
